--- a/themes/hueman/layout/_partial/article.ejs
+++ b/themes/hueman/layout/_partial/article.ejs
@@ -44,11 +44,12 @@
       </footer>
     </div>
   </article>
-  <% if (post.comments && config.disqus_shortname){ %>
+  <% if (post.comments){ %>
     <section id="comments">
-      <div id="disqus_thread">
-        <noscript>Please enable JavaScript to view the <a href="//disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-      </div>
+	<!-- UY BEGIN -->
+	<div id="uyan_frame"></div>
+	<script type="text/javascript" src="http://v2.uyan.cc/code/uyan.js?uid=2066865"></script>
+	<!-- UY END -->
     </section>
   <% } %>
 <% } %>
